@@ -32,6 +32,9 @@
    reflog time specifications (``@{time}``) using Git's approxidate format (e.g.,
    ``HEAD@{yesterday}`, ``master@{2.weeks.ago}``). (Jelmer Vernooĳ, #1783)
 
+ * Add ``dulwich stripspace`` command to remove unnecessary whitespace from text.
+   (Jelmer Vernooĳ, #1838)
+
 0.24.7	2025-10-23
 
  * Add sparse index support for improved performance with large repositories.
